--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.show-sql = true
 
 #[Opcional] dialecto utilizado
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL10Dialect
+
+#cambios en para las tareas
