se crearon las entidades y la conección la la base de datos fué exitosa Close #2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=sofia
 spring.jpa.show-sql = true
 
 #[Opcional]Crea las tablas.
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #[Opcional] dialecto utilizado
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL10Dialect
